fix: -added ProfilePic -added introductory text -added linkedin URL

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
     <div class="container">
         <header>
-            <img class="profile-avatar" src="https://via.placeholder.com/96x96" alt="" >
+            <img class="profile-avatar" src="src/images/ProfilePic.jpeg" alt="Foto de perfil" >
             <div class="profile-bio">
                 <h1 class="profile-bio-name">Mozart Soares</h1>
                 <h2 class="profile-bio-subtitle">Desenvolvedor Front-end</h2>
                 <p class="profile-bio-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, voluptatum. Eveniet rem dolorem, repellat suscipit dicta cupiditate similique beatae non, distinctio necessitatibus quidem molestiae facilis dolorum labore amet omnis explicabo.
+                    🔨 Sinta-se à vontade para explorar meu portfólio e conferir alguns dos meus projetos mais recentes! 
+Vamos nos conectar e discutir como podemos colaborar em ideias e projetos empolgantes juntos. 🚀💡
                 </p>
             </div>
         </header>
@@ -29,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="www.linkedin.com/in/mozart-soares">
                         <img src="src/images/linkedin.svg" alt="Logo do linkedin">
                     </a>
                 </li>
