fix: - changed listed project

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ Vamos nos conectar e discutir como podemos colaborar em ideias e projetos empolg
                     </a>
                 </li>
                 <li class="projects-list-item">
-                    <a href="https://galeria-de-fotos-ivory.vercel.app">
-                        Visite o projeto <span>"Galeria de fotos"</span> 
+                    <a href="https://sorteador-lilac.vercel.app">
+                        Visite o projeto <span>"Sorteador"</span> 
                     </a>
                 </li>
             </ul>
